# Hydra-Co-op

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: style.css
split_screen_launcher/: Cargo.toml
src/: adaptive_config.rs  audio_manager.rs  cli.rs  compatibility_checker.rs  config.rs  errors.rs  game_detection.rs  gamepad_manager.rs  gui.rs  input_mux.rs  instance_manager.rs  lib.rs  logging.rs  main.rs  net_emulator.rs  network_bridge.rs  proton_integration.rs  universal_launcher.rs  window_manager.rs
