[package]
name = "hydra-coop-launcher"
version = "0.1.0"
edition = "2021"
description = "A tool for Linux to simplify setting up local split-screen co-operative gameplay"
authors = ["DrLegitamate"]
license = "MIT"
repository = "https://github.com/DrLegitamate/Hydra-Co-op"

[dependencies]
# GTK 4 bindings for the GUI
gtk = { version = "0.9", package = "gtk4" }

# Command-line argument parsing
clap = { version = "4.5", features = ["derive"] } # Updated to a recent 4.x version

# Serialization/Deserialization for configuration
serde = { version = "1.0.197", features = ["derive"] } # Updated to a recent version
toml = "0.8.10" # Updated to a recent version

# Logging
log = "0.5.1" # Updated to match env_logger 0.11
env_logger = "0.11.1" # Updated to a recent version

# X11 bindings for window management
x11rb = "0.13.2" # Updated to a recent version

# Linux input device handling (evdev)
evdev = "0.12.1" # Updated to a recent version

# Linux virtual input device creation (uinput)
uinput = "0.5.2" # Added missing dependency

# Polling for efficient non-blocking I/O (networking)
polling = "3.6.0" # Added missing dependency

# Graceful shutdown on Ctrl+C
ctrlc = "3.4.4" # Added missing dependency

# JSON serialization/deserialization (for DeviceIdentifier in GUI)
serde_json = "1.0.114" # Added missing dependency

# Additional dependencies for improved functionality
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
# Temporary files (used in config module tests)
# Marked as optional dependency only for tests
[dev-dependencies]
tempfile = "3.10.1"

# Optional: Add optimization for release builds
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
