[package]
name = "hydra-coop-launcher"
version = "0.1.0"
edition = "2021"
description = "A tool for Linux to simplify setting up local split-screen co-operative gameplay"
authors = ["DrLegitamate"]
license = "MIT"
repository = "https://github.com/DrLegitamate/Hydra-Co-op"

[dependencies]
# GTK 4 bindings for the GUI (re-exports glib/gdk we need)
gtk = { version = "0.9", package = "gtk4" }

# Command-line argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization/Deserialization for configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
log = "0.4"
fern = "0.7"

# X11 bindings for window management
x11rb = "0.13"

# Linux input device handling (evdev)
evdev = "0.12"

# Non-blocking socket polling (used by net_emulator)
polling = "3.6"

# Graceful shutdown on Ctrl+C
ctrlc = "3.4"

# Error handling helpers
thiserror = "1.0"

# Config/data directory lookup
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
